# drone-audit

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Makefile  NOTICE.md  README.md  SECURITY.md  drone_audit_pipeline.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  data_format_validation.md  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
db/migrations/: 20260504_agras_audit_schema.sql  20260504_operational_audit_schema.sql
docs/: architecture.md  audit-rules.md  development.md  expected-real-files.md  filosofia-codigo-leve.md  final-github-checklist.md  github-create-step-by-step.md  github-publish.md  local-real-file-validation.md  methodology.md  metodologia.md  pre-publish-checklist.md  public-private-split.md  quality-gates.md  release-checklist.md  roadmap-backlog.md  sanitization.md  support-matrix.md
examples/: sample_agras_telemetry.csv  sample_field_data.json  sample_flight.csv  sample_route.kml  sample_track_gx.kml
examples/real_samples/: README.md
src/drone_audit/: __init__.py  agras_metrics.py  agras_telemetry.py  classifier.py  cli.py  data_quality.py  diagnostics.py  field_aliases.py  field_data.py  metrics.py  operations.py  pipeline.py  privacy.py  report.py  schema.py  spray_detector.py  states.py  storage.py  telemetry_normalizer.py  time_utils.py  workflow.py
src/drone_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/drone_audit/agras/: __init__.py
src/drone_audit/agras/analyzers/: calculate_agras_metrics.py  classify_agras_events.py  generate_agras_diagnostics.py
src/drone_audit/agras/mocks/: mock_agras_operacao_t40.py
src/drone_audit/agras/normalizers/: normalize_agras_flight.py
src/drone_audit/agras/parsers/: smartfarm_csv_parser.py  smartfarm_json_parser.py  smartfarm_kml_parser.py  smartfarm_xlsx_parser.py
src/drone_audit/agras/types/: agras_models.py
src/drone_audit/agras/utils/: agras_hash.py  agras_units.py
src/drone_audit/lib/importers/: __init__.py  dji_agras.py
src/drone_audit/parsers/: __init__.py  base.py  csv_parser.py  dat_parser.py  kml_parser.py  txt_parser.py  xlsx_parser.py
src/drone_audit/tools/: __init__.py  anonymize_csv.py
tests/: conftest.py  test_agras_metrics.py  test_agras_module.py  test_alpha_readiness.py  test_alpha_readiness_docs_and_templates.py  test_area_volume_logic.py  test_cli_diagnose.py  test_cli_xlsx.py  test_csv_parser.py  test_dat_parser.py  test_data_quality.py  test_diagnostics.py  test_field_aliases.py  test_foundation_hardening_docs_and_tooling.py  test_kml_parser.py  test_metrics_classifier.py  test_pipeline_agras_telemetry.py  test_pipeline_report.py  test_privacy_and_docs.py  test_readme_instructions.py  test_spray_detector.py  test_storage.py  test_telemetry_normalizer.py  test_time_utils.py  test_txt_parser.py  test_workflow.py  test_xlsx_parser.py
