[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-audit"
version = "0.3.0-alpha"
description = "Experimental auxiliary analysis tool for exported DJI Agras operation files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Italo Schelive Correia", email = "agroschelive@gmail.com" }
]
keywords = ["drone", "agriculture", "dji", "agras", "audit", "geospatial", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
  "pandas>=2.0",
  "pyproj>=3.6",
  "folium>=0.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
  "build>=1.2.0",
]
test = ["pytest>=8.0"]

[project.scripts]
drone-audit = "drone_audit.cli:main"

[project.urls]
Homepage = "https://github.com/agroschelive/drone-audit"
Repository = "https://github.com/agroschelive/drone-audit"
Issues = "https://github.com/agroschelive/drone-audit/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
