[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-audit"
version = "0.3.0-alpha"
description = "Experimental auxiliary analysis tool for exported DJI Agras operation files."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pandas>=2.0",
  "pyproj>=3.6",
  "folium>=0.16"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8.0",
  "build>=1.2.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
